fixed cards on mobile view

--- a/src/CSS/ContactUs.css
+++ b/src/CSS/ContactUs.css
@@ -13,6 +13,7 @@
     justify-content: center;
     align-items: center;
 }
-.ContactUsCard form input,textarea{
+.ContactUsCard form input,
+.ContactUsCard form textarea{
     margin-top: 20px !important;
 }
